# tendabike

./: .dockerignore  .drone.yml  .env  .gitignore  Cargo.toml  Cross.toml  Docker_prebuild  Dockerfile  Dockerfile.distroless  Dockerfile.github  Dockerfile.hello  ONBOARDING.md  README.md  Rocket.toml  Rocket.toml.example  cross.Dockerfile  docker-compose.yml  package-lock.json  patchlibpq  test.http
app/: Cargo.toml
app/src/: main.rs
axum/: Cargo.toml
axum/src/: activity.rs  appstate.rs  attachment.rs  domain.rs  error.rs  lib.rs  part.rs  strava.rs  types.rs  user.rs
axum/src/domain/: activity.rs  attachment.rs  mod.rs  part.rs  service.rs  types.rs  user.rs
axum/src/strava/: mod.rs  oauth.rs  redirect.rs  requestuser.rs  webhook.rs
backend/app/: Cargo.toml
backend/app/src/: main.rs
backend/axum/: Cargo.toml
backend/axum/src/: appstate.rs  domain.rs  error.rs  lib.rs  strava.rs
backend/diesel/: Cargo.toml
backend/diesel/src/: async_diesel.rs  lib.rs  store.rs  stravastore.rs
backend/domain/: Cargo.toml
backend/domain/src/: entities.rs  error.rs  lib.rs  schema.rs  traits.rs
backend/sqlx/: Cargo.toml
backend/sqlx/.sqlx/: query-0618416c6e6a95029f1fdabec6b2cf67fc701034b52ef89607791d9a79cc72d2.json  query-15f97a1183f7db24c8038e5d511811a7732ec0757c0cd961b91044bcb8ff38e4.json  query-2940ebedeccdb17d3b3e1c91d20846acc7c4f7f9a09e30245a3956358d0a5ed9.json  query-2bb82a3364f21ec7b87033642029794d970bc91237e5c76523a8a7157dc7b00a.json  query-3477b560bde8c813dacba1eb35f946ec26da9289c664761a83fa7d117d17bed6.json  query-36dc6573f6406db8b2d0f8f23bd37dfbb8c3962ab0365a0da1b4af95060d22a2.json  query-4298d9bb29195e362ff10202560453410cc41bed96cfa452ff675cdc9d7fb80d.json  query-4fca6c9d8fcfd0cecdda74fa09c5f2a6bae4b90a38a45a36c4a4a4bd6b169227.json  query-65adcec61f05f1ebd99cfaa7e2f340ef913e5e8376b59b0f5aa2ada21508b0a3.json  query-6f4efc5724394e6f5cdbd8c5c8fa6ed633aae0b3feb83d6b99fd2a640388d3ca.json  query-886ca383f174fbf06f34b8f6d432ce309c81fa85a45b21f757bf9a901c740238.json  query-a69356f4b66a5384573fb229bb07f01b194fc1aaeb518547b6d892c8e6b91f06.json  query-b031486e41508dd115f0236606df50ff97e153306cb2c50ac45ae8f499e8b684.json  query-b6d75e908a27a21adf69e0919f49961fd4ad2b95437a75b5efc691b4cb14dbc6.json  query-b9e4a0a5ec34c36d09bbcbac57ed7b99bea4673d7ecfa5b94e397e03db1824f1.json  query-cbfe8cb7fcf495ad0e425b12d4d8f5fc854d83b48f0dab73f50379920646f483.json  query-dc3ba454263c57aec87756a928881d122d6e3cc718f7bc2357589fb912dc59cf.json  query-e3610546eef49a35f8d8d5fde58234d53f35160bab2492fed9321da0b76a8f04.json  query-ec46c624ceddab938d1166c13e8c49eb35844bc27fe39bb0ad81172f7f801913.json  query-f300ea2f7234109c1a3177eb2129649270ebb5bf27909772aae9dc99faebadd9.json  query-f744665bd9fae493d0881a167081928e18a4fe1330a7da4ae313544cacd006d8.json
backend/sqlx/migrations/: 20250101000000_initial_schema.down.sql  20250101000000_initial_schema.up.sql  20250104000000_add_onboarding_status.down.sql  20250104000000_add_onboarding_status.up.sql  20250127000000_add_notes_to_parts.down.sql  20250127000000_add_notes_to_parts.up.sql  20250131000000_add_garages.down.sql  20250131000000_add_garages.up.sql  20250131000001_add_garage_registration_requests.down.sql  20250131000001_add_garage_registration_requests.up.sql  20250202000000_add_garage_subscriptions.down.sql  20250202000000_add_garage_subscriptions.up.sql  20250202000001_add_subscription_response_message.down.sql  20250202000001_add_subscription_response_message.up.sql  20251219182703_usages_nonnull.down.sql  20251219182703_usages_nonnull.up.sql  20260108103729_shop_to_parts.down.sql  20260108103729_shop_to_parts.up.sql  20260112103119_shop_auto_approve.down.sql  20260112103119_shop_auto_approve.up.sql
backend/sqlx/src/: async_diesel.rs  lib.rs  store.rs  stravastore.rs  tb_sqlx.rs
backend/strava/: Cargo.toml
backend/strava/src/: activity.rs  event.rs  gear.rs  lib.rs  strava_schema.rs  traits.rs  user.rs
diesel/: Cargo.toml
diesel/migrations/2019-05-09-105010_create_activities/: up.sql
diesel/migrations/2019-06-11-201509_attachments/: up.sql
diesel/migrations/2020-12-01-161309_create_strava_tables/: up.sql
diesel/migrations/2020-12-16-203346_add_type_groups/: down.sql
diesel/migrations/2020-12-25-184414_detached_not_null/: up.sql
diesel/migrations/2023-06-14-072954_strava_user_nullable_refresh/: down.sql  up.sql
diesel/src/: async_diesel.rs  lib.rs  store.rs  stravastore.rs
domain/: Cargo.toml
domain/src/: activity.rs  entities.rs  error.rs  lib.rs  part.rs  schema.rs  summary.rs  traits.rs  types.rs  usage.rs  user.rs
p_rocket/: Cargo.toml
p_rocket/src/: jwt.rs  lib.rs  routes.rs  strava.rs
server/: .env  Cargo.toml
server/app/: Cargo.toml
server/domain/: Cargo.toml
server/kernel/: Cargo.toml  diesel.toml
server/src/: activity.rs  attachment.rs  attachment2.rs  domain.rs  drivers.rs  error.rs  jwt.rs  lib.rs  main.rs  p_rocket.rs  part.rs  presentation.rs  schema.rs  services.rs  token.rs  types.rs  user.rs
server/tests/: part_types.csv  parts.csv  test_api.rs
strava/: Cargo.toml
strava/src/: activity.rs  event.rs  gear.rs  lib.rs  schema.rs  traits.rs  user.rs
tb_common/: Cargo.toml
tb_common/src/: error.rs  lib.rs
tb_engine/: .env  Cargo.toml  test.http
tb_engine/src/: activity.rs  attachment.rs  docker-compose.yml  error.rs  lib.rs  part.rs  schema.rs  types.rs  user.rs
tb_engine/templates/: base.html.tera
tb_engine/tests/: activity_types.csv  attachments.csv  join_g_s  part_types.csv  parts.csv  test_api.rs
tb_frontend/: .env  Cargo.toml
tb_frontend/src/: dashboard.rs  lib.rs  main.rs  user.rs
tb_frontend/templates/: attach.html.tera  attached.html.tera  base.html.tera  dashboard.html copy  dashboard.html.tera  macros.html.tera  part.html.tera  part_hist.html.tera  part_new.html.tera  type.html.tera
tb_strava/: .gitignore  Cargo.toml
tb_strava/src/: activity.rs  auth.rs  error.rs  gear.rs  lib.rs  main.rs  schema.rs  tb.rs  ui.rs  user.rs  webhook.rs
tb_strava/templates/: activities.html.tera  gear.html.tera  user.html.tera
tb_strava/www/: index.html
(+728 files in other folders)
