[workspace]
package.edition = "2021"
resolver = "2"
members = [
    "backend/app",
    "backend/domain",
    "backend/axum",
    "backend/strava",
    "backend/diesel",
]

[workspace.dependencies]

tb_domain = { path = "./backend/domain" }
tb_axum = { path = "./backend/axum" }
tb_diesel = { path = "./backend/diesel" }
tb_strava = { path = "./backend/strava" }

anyhow = "1.0"
async-recursion = "1"
async-session = "3.0.0"
async-trait = "0.1"
axum = "0.8"
axum-extra = "0.10"
axum-macros = "0.5"
csv = "1.3"
diesel = "^2.2.3"
diesel-async = "0.5"
diesel-derive-newtype = "2"
diesel_migrations = "2"
dotenvy = "0.15"
futures = "0.3"
headers = "0.4"
http = "1"
newtype_derive = "0.1"
oauth2 = "5.0.0"
pretty_assertions = "1"
reqwest = { version = "0.12", default-features = false }
scoped-futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.111"
serde_with = "3"
thiserror = "2.0"
time = "0.3"
time-tz = "2"
tokio = "1.35.1"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.7.0"
