[workspace]
package.edition = "2024"
resolver = "2"
members = [
    "backend/app",
    "backend/domain",
    "backend/axum",
    "backend/strava",
    "backend/sqlx",
]

[workspace.dependencies]

tb_domain = { path = "./backend/domain" }
tb_axum = { path = "./backend/axum" }
tb_strava = { path = "./backend/strava" }
tb_sqlx = { path = "./backend/sqlx" }

anyhow = "1.0"
async-recursion = "1"
async-session = "3.0.0"
async-trait = "^0.1"
axum = "0.8"
axum-extra = "^0.12"
axum-macros = "0.5"
csv = "1.3"
dotenvy = "0.15"
futures = "0.3"
headers = "0.4"
http = "1"
log = "*"
newtype_derive = "0.1"
oauth2 = "5.0.0"
pretty_assertions = "1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.111"
serde_with = "3"
thiserror = "2.0"
time = "0.3"
time-tz = "2"
tokio = "1.44.2"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.7.0"
