[workspace]
package.edition = "2024"
resolver = "2"
members = [
    "backend/app",
    "backend/domain",
    "backend/axum",
    "backend/strava",
    "backend/sqlx",
]

[workspace.dependencies]

tb_domain = { path = "./backend/domain" }
tb_axum = { path = "./backend/axum" }
tb_strava = { path = "./backend/strava" }
tb_sqlx = { path = "./backend/sqlx" }

anyhow = "1.0"
async-recursion = "1"
async-trait = "^0.1"
derive_more = "2"
log = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.111"
serde_with = "3"
thiserror = "2.0"
time = "0.3"
tokio = "1.44.2"
uuid = "1.7.0"
oauth2 = "5.0.0"
