[package]
name = "tendabike"
version = "0.4.2"
edition = "2021"
default-run = "tendabike"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.aarch64-unknown-linux-gnu]
pre-build = [
  "dpkg --add-architecture $CROSS_DEB_ARCH",
  "apt-get update && apt-get --assume-yes install libpq5:$CROSS_DEB_ARCH libssl3:$CROSS_DEB_ARCH"
]

[dependencies]
dotenvy = "0.15"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tb_domain = { path = "../domain"}
tb_axum = { path = "../axum"}
tb_diesel = { path = "../diesel"}