[package]
name = "tb_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tb_domain = {path = "../domain"}
tb_strava = {path = "../strava"}
tb_diesel = {path = "../diesel"}

anyhow = "1.0"
thiserror = "1.0"

async-session = "3.0.0"
axum = { version = "0.6", features = ["headers"] }
headers = "0.3"
http = "0.2"
oauth2 = "4.1"
# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["full"] }
axum-macros = "0.3"
lazy_static = "1.4"
