[package]
name = "tb_domain"
version = "0.3.0"
authors = ["Christoph Rohland <tendabike@rohland.net>"]
edition = "2021"

[dependencies]
diesel = { version = "2", features = ["time", "postgres" ] }
scoped-futures = "0.1"
diesel-derive-newtype = "2"

newtype_derive = "0.1"
async-session = "3.0.0"
serde = "1.0" 
serde_derive = "1.0"
serde_with = { version = "3", features = ["time_0_3"] }
csv = "1.3"

time = { version = "0.3", features = ["serde", "parsing", "serde-human-readable"] }
time-tz = {version = "2", features = ["db"]}
pretty_assertions = "1"

thiserror = "1.0"
anyhow = "1.0"

async-trait = "0.1"
uuid = { version = "1.7.0", features = ["v7", "fast-rng", "macro-diagnostics", "serde"] }

[dev-dependencies]
tokio = { version = "1",  features = ["macros", "rt"]}
