[package]
name = "p_rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel = {path = "../server"}

rocket = "0.4"
rocket_cors = "0.5"
rocket_oauth2 = "0.4"

rocket_contrib = { version = "0.4", default-features = false, features = ["diesel_postgres_pool", "json", "serve"]}

diesel = { version = "1", features = ["postgres", "chrono"] }

log = "0.4.17"
anyhow = "1.0"
thiserror = "1.0"
time = "0.1"
jsonwebtoken = "8"
serde = "1.0" 
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.11.17"
