[package]
name = "tendabike"
version = "0.3.0"
authors = ["Christoph Rohland <tendabike@rohland.net>"]
edition = "2021"

[dependencies]
rocket = "0.4"
rocket_cors = "0.5"
rocket_oauth2 = "0.4"

reqwest = { version = "0.11.0", features = ["blocking", "json"] }
jsonwebtoken = "7.2"

diesel = { version = "1.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4"
diesel-derive-newtype = "1"

newtype_derive = "0.1"
dotenv = "0.15"
log = "0.4"  
env_logger = "0.9"
serde = "1.0" 
serde_derive = "1.0"
serde_json = "1.0"
csv = "1.1"

chrono = { version ="0.4", features = ["serde"] }
chrono-tz = "0.6"
time = "0.1"

pretty_assertions = "1"

thiserror = "1.0"
anyhow = "1.0"

lazy_static = "1.4"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "json", "serve"]
