[package]
name = "tendabike"
version = "0.3.0"
authors = ["Christoph Rohland <tendabike@rohland.net>"]
edition = "2021"

[dependencies]
rocket = "0.4"
rocket_cors = "0.5"
rocket_oauth2 = "0.4"

reqwest = { version = "0.11.0", features = ["blocking", "json"] }
jsonwebtoken = "8.3"

diesel = { version = "2.0", features = ["postgres", "chrono"] }
diesel_migrations = "2.0"
diesel-derive-newtype = "2.0"

newtype_derive = "0.1"
dotenv = "0.15"
log = "0.4"  
env_logger = "0.10.0"
serde = "1.0" 
serde_derive = "1.0"
serde_json = "1.0"
csv = "1.1"

chrono = { version ="0.4", features = ["serde"] }
chrono-tz = "0.8"
time = "0.3"

pretty_assertions = "1"

thiserror = "1.0"
anyhow = "1.0"

lazy_static = "1.4"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "json", "serve"]
