[package]
name = "tb_strava"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tb_domain = {path = "../domain"}

diesel = { version = "2", features = ["time"] }
scoped-futures = "0.1"
diesel-derive-newtype = "2"

newtype_derive = "0.1"
async-session = "3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
futures = "0.3"
time = { version = "0.3", features = ["serde"] }
async-recursion = "1"
async-trait = "0.1"