[package]
name = "tb_common"
version = "0.1.0"
authors = ["Christoph Rohland <hcrohland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
diesel = "1.4.3"
chrono = "0.4.9"

log = "0.4.8"  
#simplelog = "0.7.4"
