[package]
name = "tb_common"
version = "0.1.0"
authors = ["Christoph Rohland <hcrohland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
reqwest = "0.9.22"
diesel = "1.4.3"
chrono = "0.4.9"
jsonwebtoken = "5"
serde = "1.0.102" 
serde_derive = "1.0.102"
serde_json = "1.0.41"
time = "0.1.42"

log = "0.4.8"  
#simplelog = "0.7.4"
