[package]
name = "tb_common"
version = "0.1.0"
authors = ["Christoph Rohland <hcrohland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
rocket = "0.4"
rocket_contrib = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
diesel = "1.4"
chrono = "0.4"
jsonwebtoken = "5"
serde = "1.0" 
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"

log = "0.4.8"  
#simplelog = "0.7.4"
