[package]
name = "tb_engine"
version = "0.1.0"
authors = ["Christoph Rohland <hcrohland@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tb_common = { path = "../tb_common" }
rocket = "0.4.2"
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
diesel-derive-newtype = "0.1.2"

newtype_derive = "0.1.6"
dotenv = "0.14.1"
log = "0.4.8"  
simplelog = "0.7.4"
serde = "1.0.101" 
serde_derive = "1.0.101"
serde_json = "1.0.41"
csv = "1.1.1"

chrono = { version ="0.4.9", features = ["serde"] }

pretty_assertions = "0.6.1"

thiserror = "1"
anyhow = "1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json", "serve", "tera_templates"]
