[package]
name = "tb_frontend"
version = "0.1.0"
authors = ["Christoph Rohland <hcrohland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tb_common = {path = "../tb_common"}
rocket = "0.4.2"
reqwest = "0.9.22"
dotenv = "0.15.0"
log = "0.4.8"  
simplelog = "0.7.4"
lazy_static = "1.4"
serde = "1.0" 
serde_derive = "1.0"
serde_json = "1.0"

chrono = { version ="0.4.9", features = ["serde"] }

pretty_assertions = "0.6.1"

anyhow = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "serve", "tera_templates"]
