[package]
name = "tb_strava"
version = "0.1.0"
authors = ["Christoph Rohland <hcrohland@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tb_common = {path = "../tb_common"}

rocket = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
diesel = { version = "1.4", features = ["postgres", "chrono"] }
rocket_oauth2 = "0.4.1"

diesel-derive-newtype = "0.1.2"

newtype_derive = "0.1.6"
dotenv = "0.15.0"
log = "0.4"  
simplelog = "0.7"
lazy_static = "1.4.0"
serde = "1.0" 
serde_derive = "1.0"
serde_json = "1.0"

chrono = { version ="0.4", features = ["serde"] }

pretty_assertions = "0.6.1"

anyhow = "1.0"
thiserror = "1.0"
time = "0.1"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "json", "serve"]

