[package]
name = "tendabike"
version = "0.7.0"
edition = { workspace = true }
default-run = "tendabike"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tb_domain = { workspace = true }
tb_axum = { workspace = true }
tb_sqlx = { workspace = true }
