[package]
name = "tendabike"
version = "0.9.0"
edition = { workspace = true }
default-run = "tendabike"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
mimalloc = { version = "0.1", features = ["secure"] }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tb_axum = { workspace = true }
