[package]
name = "tb_axum"
version = "0.5.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tb_domain = { workspace = true }
tb_strava = { workspace = true }
tb_sqlx = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

async-session = { workspace = true }
axum = { workspace = true, features = ["macros"] }
headers = { workspace = true }
http = { workspace = true }
oauth2 = { workspace = true }
# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["time_0_3"] }
time = { workspace = true, features = [
    "serde",
    "parsing",
    "serde-human-readable",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tower-http = { workspace = true, features = ["full"] }
axum-macros = { workspace = true }
tokio = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
rand = { workspace = true }
