[package]
name = "tb_axum"
version = "0.9.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tb_domain = { workspace = true }
tb_strava = { workspace = true }
tb_sqlx = { workspace = true }

reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
] }
hmac = "*"
sha2 = "*"
base64 = "*"
rand = "0.10"
axum = { version = "0.8", features = ["macros"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["full"] }
# 0.15 fails on deletion-task...
# tower-sessions = { version = "0.15", features = ["deletion-task"] }
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
axum-macros = "0.5"

oauth2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["time_0_3"] }
time = { workspace = true, features = [
    "serde",
    "parsing",
    "serde-human-readable",
] }
tokio = { workspace = true }
hex = "0.4.3"

[lib]
test = false
doctest = false
