[package]
name = "tb_domain"
version = "0.9.0"
authors = ["Christoph Rohland <tendabike@rohland.net>"]
edition = { workspace = true }

[dependencies]

csv = "1.3"

derive_more = { workspace = true, features = ["from", "into", "display"] }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_with = { workspace = true, features = ["time_0_3"] }

time = { workspace = true, features = [
    "serde",
    "parsing",
    "serde-human-readable",
] }

thiserror = { workspace = true }
anyhow = { workspace = true }

async-trait = { workspace = true }
uuid = { workspace = true, features = [
    "v7",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lib]
doctest = false
