[package]
name = "tb_sqlx"
version = "0.0.1"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { workspace = true, features = ["postgres", "time", "uuid"] }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
scoped-futures = { workspace = true }
diesel_migrations = { workspace = true }
async-session = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
tb_strava = { workspace = true }
tb_domain = { workspace = true }
uuid = { workspace = true }
oauth2 = { workspace = true }
