[package]
name = "tb_sqlx"
version = "0.0.1"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "time",
    "uuid",
    "macros",
] }
async-session = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
tb_strava = { workspace = true }
tb_domain = { workspace = true }
uuid = { workspace = true }
oauth2 = { workspace = true }
