[package]
name = "tb_strava"
version = "0.3.1"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tb_domain = { workspace = true }

scoped-futures = { workspace = true }

newtype_derive = { workspace = true }
async-session = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
futures = { workspace = true }
time = { workspace = true, features = ["serde"] }
async-recursion = { workspace = true }
async-trait = { workspace = true }
oauth2 = { workspace = true }
