[package]
name = "tb_strava"
version = "0.9.0"
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tb_domain = { workspace = true }

log = { workspace = true }
derive_more = { workspace = true, features = ["from", "into", "display"] }
serde = { workspace = true }
serde_derive = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true, features = ["serde"] }
async-recursion = { workspace = true }
async-trait = { workspace = true }
oauth2 = { workspace = true }

[lib]
test = false
doctest = false
