[package]
name = "domain"
version = "0.2.1"
authors = ["Christoph Rohland <tendabike@rohland.net>"]
edition = "2021"

[dependencies]
s_diesel = {path = "../drivers/s_diesel"}

diesel = { version = "2", features = ["postgres", "time" ] }
diesel-async = { version = "0.3", features = ["postgres", "deadpool" ] }
diesel_migrations = "2"
diesel-derive-newtype = "2"

newtype_derive = "0.1"
async-session = "3.0.0"
serde = "1.0" 
serde_derive = "1.0"
serde_with = { version = "3", features = ["time_0_3"] }
csv = "1.1"

time = { version = "0.3", features = ["serde", "parsing", "serde-human-readable"] }
time-tz = {version = "1", features = ["db"]}
pretty_assertions = "1"

thiserror = "1.0"
anyhow = "1.0"

## Needed for drivers::strava
