[package]
name = "kernel"
version = "0.1.0"
authors = ["Christoph Rohland <tendabike@rohland.net>"]
edition = "2021"

[dependencies]

diesel = { version = "2", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "2"
diesel-derive-newtype = "2"

newtype_derive = "0.1"
log = "0.4.3"  
serde = "1.0" 
serde_derive = "1.0"
csv = "1.1"

chrono = { version ="0.4", features = ["serde"] }
chrono-tz = "0.8"

pretty_assertions = "1"

thiserror = "1.0"
anyhow = "1.0"
r2d2 = "0.8.10"

## Needed for drivers::strava
