[package]
name = "s_diesel"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2", features = ["postgres", "time" ] }
diesel-async = { version = "0.3", features = ["postgres", "deadpool" ] }
scoped-futures = "0.1"
diesel_migrations = "2"
async-session = "3.0.0"
anyhow = "1.0"
time = { version = "0.3", features = ["serde", "parsing", "serde-human-readable"] }
tb_strava = {path = "../strava"}
domain = {path = "../../domain"}
